src/test/run-pass/issue-3878.rs
fn main()
{
    let y = ~1;
    move y;
}
